fixed hamburger icon
Change-Id: Ied012f4d0ec5f76b7e1cfd229b7fe1bcd1049299

--- a/assets/hbpdoc.scss
+++ b/assets/hbpdoc.scss
@@ -1,5 +1,5 @@
 $gotham-font-path: 'bower_components/hbp-collaboratory-theme/dist/fonts/';
-$md-font-path: 'bower_components/material-design-iconic-font/fonts';
+$zmdi-font-path: 'bower_components/material-design-iconic-font/dist/fonts';
 
 // bower:scss
 @import "bower_components/material-design-iconic-font/scss/material-design-iconic-font.scss";
